[package]

name = "mydht-wot"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
#default = ["with-extra-test","rust-crypto"]
default = ["with-extra-test","openssl-impl"]
openssl-impl = ["openssl"]
striple-impl = ["striple"]
rust-crypto-impl = ["rust-crypto"]
with-extra-test = []

[dependencies]
log = "0.3.2"
#env_logger = "0.3.1"
#uuid = "0.1.18"
num = "0.1.27"
rand = "0.3.11"
bincode = "0.4.0"
rustc-serialize = "0.3.16"
time = "0.1.33"
#byteorder = "0.3.13"
#bit-vec = "0.4.2"
#vec_map = "0.3.0"


[dependencies.mydht-base]
#path = "../mydht-base/"
git = "https://github.com/cheme/mydht-base.git"


[dev-dependencies.mydht-basetest]
#path = "../mydht-basetest/"
git = "https://github.com/cheme/mydht-basetest.git"


[dependencies.rust-crypto]
version = "0.2.33"
optional = true

[dependencies.openssl]
version = "0.6.7"
optional = true

[dependencies.striple]
version = "0.0.1"
git = "https://github.com/cheme/rust-striple.git"
#path = "../../rust-striple/"
optional = true
features = ["public_crypto","serialize","public_openssl","cryptoecdsa","opensslrsa","opensslpbkdf2"]



